--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build":"tsc",
-    "start:only":"node ./build/index.js",
+    "build": "tsc",
+    "start:only": "node ./build/index.js",
     "start": "npm run build & node ./build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/node": "^20.11.25"
+  }
 }
