--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^20.11.25"
+    "@types/node": "^20.11.25",
+    "axios": "^1.6.8"
   }
 }
